FlightPath 5.x Changelog
========================

2016-04-06
  Fixed isses with db queries which specified '?~?' or similar syntax, which is incompatible with the new PDO system.
  
  Changed checkboxes to use spans with classes for graphics, so we can easily overwrite as needed.
  

2016-04-05
  Replaced some hard-coded values with constants.
  
  Fixed bug with group titles in view and what if.

  Fixed mysql bug in course_search.module, fixed various issues which were causing "notices".
  

2016-04-04
  Fixed bug in what if selection screen for tracks.  Added new javascript function to create CSS-friendly strings.
  
  Added ability in System Settings to show group titles on View and What If screens, not just in print mode.
  

2016-04-01
  Fixed a bug in user.student.inc where major codes were not being read correctly from student_degrees table.
  

2016-03-31
  Added option to CourseList function sort_alphabetical_order, to include the degree's advising weight of the degree the course requires first, to make
  it also get sorted by degree.
  
  Changed the way semester blocks are drawn in AdvisingScreen, to group degrees together by advising weight, then name, alphabetically.
  Made similar changes to AdvisingScreenTypeView.  Also added more CSS classes to elements, making it easier to target.


2016-03-30
  Added extra class names when drawing courses and group selection rows.  Also, created new CSS class called "selection_highlight" that gets
  added and removed over certain items.  Updated theme css files to accomodate.
  

2016-03-29
  Fixed bug in what if selection screen.
  
  Cleaned up student search module a little, added extra CSS so that major codes more stylable.
  Also made student_search module PDO compliant, not relying on older mysql_real_escape_string function calls anymore.


2016-03-28
  Implemented hook for fp_get_student_majors().
  