@@ -71,7 +71,10 @@
   font-weight: normal;
 }
 
-
+.popup-description-section {
+  font-size: 10pt;
+  padding-top: 10px;
+}
 
 
 
